OO-5513: update i18n keys and remove the ERROR message